# spotify-favs-api

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: db.rs  jwt.rs  main.rs  spotify.rs
