[package]
name = "favs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
reqwest = "0.11.16"
base64 = "0.21.0"
redis = "0.23.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
bincode = "1.3.3"
