[package]
name = "favs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["headers", "ws"] }
axum-extra = { version = "0.7.7", features = ["cookie", "typed-routing"] }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["cors"] }
futures = "0.3.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = "0.11.16"
base64 = "0.21.0"
redis = "0.23.0"
bincode = "1.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
jsonwebtoken = "8.0"
once_cell = "1.8"

[dependencies.uuid]
version = "1.4.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde",
]
